--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -135,7 +135,8 @@
         android:backgroundTint="#0A0B27"
         app:cardCornerRadius="18dp"
         app:cardElevation="6dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
