--- a/app/src/main/res/layout/activity_irrigation_control.xml
+++ b/app/src/main/res/layout/activity_irrigation_control.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -64,6 +63,7 @@
                     android:textSize="18dp"
                     ></TextView>
                 <Switch
+                    android:id="@+id/autodc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
@@ -81,12 +81,14 @@
                 ></TextView>
 
             <Switch
+                android:id="@+id/manuald"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
               android:layout_gravity="center"
                 android:track="@drawable/swit"
                 android:thumb="@drawable/thum1"
                 android:scaleX="1.2"
+
                 ></Switch>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -120,6 +122,7 @@
                     android:textSize="18dp"
                     ></TextView>
                 <Switch
+                    android:id="@+id/autor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
@@ -136,6 +139,7 @@
 
                 ></TextView>
             <Switch
+                android:id="@+id/manualr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -174,6 +178,7 @@
                     android:textSize="18dp"
                     ></TextView>
                 <Switch
+                    android:id="@+id/autoo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5dp"
@@ -190,6 +195,7 @@
 
                 ></TextView>
             <Switch
+                android:id="@+id/manualo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
